--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,18 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkgrey"
+    android:background="#EEEEEE"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
 
     <RelativeLayout
         android:id="@+id/main"
         android:background="@color/green"
         android:layout_width="match_parent"
-        android:layout_height="72dp">
+        android:layout_height="48dp">
         <ImageView
             android:id="@+id/imgViewmapnRight"
-            android:layout_width="30dp"
-            android:layout_height="24dp"
+            android:layout_width="20dp"
+            android:layout_height="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:background="@animator/btn_more_selector"
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="25sp"
+            android:textSize="17sp"
             android:gravity="center"
             android:layout_centerInParent="true"
             android:textColor="#FFFFFF"
@@ -34,11 +34,12 @@
         android:id="@+id/linear_robot"
         android:layout_below="@+id/main"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical"
         android:layout_height="125dp">
+
         <HorizontalScrollView
             android:id="@+id/aas"
             android:layout_width="match_parent"
@@ -53,6 +54,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:dividerHeight = "9dp"
+                    android:divider="#EEEEEE"
                     android:horizontalSpacing="15dp"
                     android:verticalSpacing="15dp"
                     android:padding="5dp"
@@ -64,7 +67,7 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linear_desk"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/linear_robot"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -101,12 +104,13 @@
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
-            android:background="@color/black"
             android:layout_height="0.5dp"/>
         <GridView
             android:id="@+id/gview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:dividerHeight = "9dp"
+            android:divider="#EEEEEE"
             android:numColumns="auto_fit"
             android:columnWidth="80dp"
             />
