--- a/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
@@ -1,48 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:layout_height="125dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="76dp"
+    android:layout_height="100dp"
     android:orientation="horizontal"
-    android:gravity="center"
     android:background="@color/white"
     >
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="85dp"
-            android:layout_centerVertical="true"
-            android:layout_height="85dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="15dp"
-            android:background="@mipmap/zaixian"
-            />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_marginLeft="15dp"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:textSize="22sp"
-            android:textColor="#333333"
-            android:text="@string/deskname_setting"
-            android:layout_height="wrap_content"
-            />
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
+        android:background="@mipmap/zaixian"
+        />
 
-        <TextView
-            android:layout_marginTop="12dp"
-            android:id="@+id/text"
-            android:textSize="16sp"
-            android:text="@string/deskname_setting"
-            android:textColor="#FFFFFF"
-            android:background="@color/green"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/text"
+        android:textSize="11sp"
+        android:text="空闲"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:background="@mipmap/fuwuzhong"
+        android:layout_width="56dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="58dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:textSize="15sp"
+        android:textColor="#333333"
+        android:text="@string/deskname"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/imageview"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
