--- a/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="60dp"
-    android:layout_width="200dp"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
     android:textColor="@color/black"
-    android:textSize="27sp"
+    android:textSize="17sp"
     android:background="@color/white"
     android:gravity="center"/>
