--- a/LaserRadar/Robot/app/src/main/res/values/colors.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/colors.xml
@@ -146,7 +146,7 @@
     <color name="deepskyblue">#00BFFF</color><!--深天蓝色 -->
     <color name="darkcyan">#008B8B</color><!--暗青色 -->
     <color name="teal">#008080</color><!--水鸭色 -->
-    <color name="green">#008000</color><!--绿色 -->
+    <color name="green">#00923F</color><!--绿色 -->
     <color name="darkgreen">#006400</color><!--暗绿色 -->
     <color name="blue">#0000FF</color><!--蓝色 -->
     <color name="mediumblue">#0000CD</color><!--中兰色 -->
