--- a/LaserRadar/Robot/app/src/main/res/values/styles.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/styles.xml
@@ -22,4 +22,13 @@
     <style name="AppWelcome" parent="AppTheme">
         <item name="android:windowBackground">@mipmap/china</item>
     </style>
+    <style name="SoundRecorder" parent="@android:style/Theme.Holo.DialogWhenLarge">
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <!--<item name="android:backgroundDimEnabled">true</item>-->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <!--<item name="android:windowBackground">@android:color/transparent</item>-->
+
+    </style>
 </resources>
